--- a/src/app/registros/registro/registro.component.html
+++ b/src/app/registros/registro/registro.component.html
@@ -8,7 +8,7 @@
     <div class="d-flex justify-content-center">
       <div class="form-group">
         <label for="matricula">Matrícula</label>
-        <input type="text" class="form-control" [class.is-invalid]="registroError" formControlName="matricula" maxlength="20" id="matricula">
+        <input type="text" class="form-control" formControlName="matricula" maxlength="20" id="matricula">
         <small class="form-text text-muted">Campo obrigatório</small>
       </div>
     </div>
