--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -85,7 +85,7 @@
       </li>
     </ul>
     <form class="form-inline my-2 my-lg-0">
-      <button class="btn btn-outline-danger my-2 my-sm-0" type="submit">
+      <button disabled class="btn btn-outline-danger my-2 my-sm-0">
         <span class="text-light"><i class="fas fa-sign-out-alt"></i> Sair</span>
       </button>
     </form>
