--- a/src/app/alunos/aluno/aluno.component.html
+++ b/src/app/alunos/aluno/aluno.component.html
@@ -10,15 +10,16 @@
           <h5>Aluno</h5>
           <div class="form-group">
             <label for="nomeAluno">Nome</label>
-            <input type="text" class="form-control" [class.is-invalid]="alunoErrors.nome" formControlName="nome" maxlength="100" id="nomeAluno">
+            <input type="text" class="form-control" [class.is-invalid]="alunoErrors.nome" formControlName="nome"
+              maxlength="200" id="nomeAluno">
             <small class="invalid-feedback">{{alunoErrors.nome}}</small>
             <small class="form-text text-muted">Campo obrigatório</small>
           </div>
           <div class="form-row">
             <div class="form-group col-sm-6">
               <label for="matricula">Matrícula</label>
-              <input type="text" class="form-control" [class.is-invalid]="alunoErrors.matricula" formControlName="matricula" maxlength="20"
-                id="matricula">
+              <input type="text" class="form-control" [class.is-invalid]="alunoErrors.matricula" formControlName="matricula"
+                maxlength="20" id="matricula">
               <small class="invalid-feedback">{{alunoErrors.matricula}}</small>
               <small class="form-text text-muted">Campo obrigatório</small>
             </div>
@@ -42,7 +43,7 @@
               <label for="pesquisaTurma">
                 <a class="btn btn-sm btn-outline-secondary" data-toggle="collapse" href="#collapsePesquisaTurma" role="button"
                   aria-expanded="false" aria-controls="collapsePesquisaTurma">
-                  <i class="fas fa-search"></i> Turma existente
+                  <i class="fas fa-search"></i> Pesquisar turma
                 </a>
               </label>
               <div [class.collapse]="true" id="collapsePesquisaTurma">
@@ -57,7 +58,7 @@
           </div>
 
           <div class="form-row">
-            <div class="form-group col-sm-2">
+            <div class="form-group col-sm-3">
               <label for="turma">Turma</label>
               <input type="text" class="form-control" formControlName="turma" maxlength="5" id="turma">
             </div>
@@ -69,7 +70,7 @@
               <label for="sala">Sala</label>
               <input type="text" class="form-control" formControlName="sala" maxlength="5" id="sala">
             </div>
-            <div class="form-group col-sm-6">
+            <div class="form-group col-sm-5">
               <label for="turnoSelect">Turno</label>
               <select class="form-control" formControlName="turno" id="turnoSelect">
                 <option></option>
@@ -101,18 +102,29 @@
         </div>
       </div>
     </div>
+
     <div class="col-lg-6">
       <div class="d-flex justify-content-center">
         <div class="col-md">
           <h5>Responsável</h5>
           <div class="form-group">
             <label for="nomeResponsavel">Nome</label>
-            <input type="text" class="form-control" [class.is-invalid]="alunoErrors.nomeResponsavel" formControlName="nomeResponsavel" maxlength="100" id="nomeResponsavel">
+            <input type="text" class="form-control" [class.is-invalid]="alunoErrors.nomeResponsavel" formControlName="nomeResponsavel"
+              maxlength="200" id="nomeResponsavel">
             <small class="invalid-feedback">{{alunoErrors.nomeResponsavel}}</small>
+          </div>
+          <div class="form-row">
+            <div class="form-group col-sm-4">
+              <label for="cpf">CPF</label>
+              <input type="text" class="form-control" [class.is-invalid]="alunoErrors.cpf" formControlName="cpf" id="cpf"
+                [textMask]="{mask: masks.CPF}">
+              <small class="invalid-feedback">{{alunoErrors.cpf}}</small>
+            </div>
           </div>
           <div class="form-group">
             <label for="email">Email </label>
-            <input type="text" class="form-control" [class.is-invalid]="alunoErrors.email" formControlName="email" maxlength="200" id="email">
+            <input type="text" class="form-control" [class.is-invalid]="alunoErrors.email" formControlName="email"
+              maxlength="200" id="email">
             <small class="invalid-feedback">{{alunoErrors.email}}</small>
           </div>
           <div class="form-group">
@@ -123,25 +135,9 @@
               </a>
             </label>
             <div [class.collapse]="!aluno.email2" id="collapseEmailAdicional">
-              <input type="text" class="form-control" [class.is-invalid]="alunoErrors.email2" formControlName="email2" maxlength="200"
-                id="email2" placeholder="Informe um email adicional">
+              <input type="text" class="form-control" [class.is-invalid]="alunoErrors.email2" formControlName="email2"
+                maxlength="200" id="email2" placeholder="Informe um email adicional">
               <small class="invalid-feedback">{{alunoErrors.email2}}</small>
-            </div>
-          </div>
-          <div class="form-row">
-            <div class="form-group col-sm-4">
-              <label for="cpf">CPF</label>
-              <input type="text" class="form-control" [class.is-invalid]="alunoErrors.cpf" formControlName="cpf" id="cpf"
-                [textMask]="{mask: masks.CPF}">
-              <small class="invalid-feedback">{{alunoErrors.cpf}}</small>
-            </div>
-            <div class="form-group col-sm-4">
-              <label for="telefoneFixo">Telefone Fixo</label>
-              <input type="text" class="form-control" formControlName="telefoneFixo" id="telefoneFixo" [textMask]="{mask: masks.telefoneFixo}">
-            </div>
-            <div class="form-group col-sm-4">
-              <label for="telefoneCelular">Telefone Celular</label>
-              <input type="text" class="form-control" formControlName="telefoneCelular" id="telefoneCelular" [textMask]="{mask: masks.telefoneCelular}">
             </div>
           </div>
           <div class="form-group">
@@ -158,6 +154,32 @@
             </div>
             <small class="form-text text-muted">Enviar email no momento do registro do aluno</small>
           </div>
+          <div class="form-group">
+            <button type="button" (click)="openAdicionarTelefone()" class="btn btn-sm btn-outline-secondary"><i class="fas fa-plus"></i> Adicionar
+              telefone</button>
+          </div>
+          <div class="form-group">
+            <table class="table table-striped">
+              <thead>
+              <tr>
+                <th scope="col">Tipo</th>
+                <th scope="col">Telefone</th>
+                <th scope="col">Descrição</th>
+                <th scope="col">Opções</th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr *ngFor="let tel of aluno.telefones">
+                <td>{{ tel.tipo | tipoTelefone }}</td>
+                <td>{{ tel.telefone }}</td>
+                <td>{{ tel.descricao }}</td>
+                <td>
+                   <button class="btn-sm btn-outline-delete" (click)="removeTelefone(tel)"> <i class="fas fa-trash-alt"></i></button>
+                </td>
+              </tr>
+              </tbody>
+            </table>
+          </div>          
         </div>
       </div>
     </div>
@@ -166,19 +188,19 @@
   <app-message-form [formValidation]="formValidation"></app-message-form>
 
   <div class="d-flex justify-content-center m-3">
-    <a [routerLink]="[ '/alunos' ]" class="btn btn-secondary mr-2"><i class="fas fa-folder-open"></i> Cadastro</a>
+    <a [routerLink]="[ '/alunos' ]" class="btn-register mr-2"><i class="fas fa-folder-open"></i> Cadastro</a>
 
     <ng-container *ngIf="formValidation.editMode; then edit; else new"></ng-container>
     <ng-template #edit>
-      <a *ngIf="!formValidation.alreadyNew" class="btn btn-success mr-2" [routerLink]="[ '/alunos/cadastro' ]"><i class="fas fa-plus"></i>
+      <a *ngIf="!formValidation.alreadyNew" class="btn-new mr-2" [routerLink]="[ '/alunos/cadastro' ]"><i class="fas fa-plus"></i>
         Novo Aluno</a>
-      <button *ngIf="formValidation.alreadyNew" (click)="newAluno()" class="btn btn-success mr-2"><i class="fas fa-plus"></i>
+      <button *ngIf="formValidation.alreadyNew" (click)="newAluno()" class="btn-new mr-2"><i class="fas fa-plus"></i>
         Novo Aluno</button>
     </ng-template>
     <ng-template #new>
-      <button type="reset" (click)="clean()" class="btn btn-warning mr-2"><i class="fas fa-eraser"></i> Limpar</button>
+      <button type="reset" (click)="clean()" class="btn-clean mr-2"><i class="fas fa-eraser"></i> Limpar</button>
     </ng-template>
 
-    <button (click)="save()" class="btn btn-primary"><i class="fas fa-save"></i> Salvar</button>
+    <button (click)="save()" class="btn-save"><i class="fas fa-save"></i> Salvar</button>
   </div>
 </form>
