--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
   <h4>Cadastro de Alunos</h4>
   <div class="d-flex justify-content-end mb-2 mb-md-0">
-    <a class="btn btn-success" [routerLink]="[ 'cadastro' ]"><i class="fas fa-plus"></i> Novo Aluno</a>
+    <a class="btn-new" [routerLink]="[ 'cadastro' ]"><i class="fas fa-plus"></i> Novo Aluno</a>
   </div>
 </div>
 
@@ -20,8 +20,8 @@
       <input type="number" class="form-control" formControlName="anoLetivo" id="anoLetivo" placeholder="Filtrar pelo ano letivo">
     </div>
     <div class="d-flex justify-content-center m-4">
-      <button type="reset" class="btn btn-warning mr-2"><i class="fas fa-eraser"></i> Limpar</button>
-      <button type="submit" (click)="search()" class="btn btn-info"><i class="fas fa-search"></i> Pesquisar</button>
+      <button type="reset" class="btn-clean mr-2"><i class="fas fa-eraser"></i> Limpar</button>
+      <button type="submit" (click)="search()" class="btn-search"><i class="fas fa-search"></i> Pesquisar</button>
     </div>
   </form>
 </div>
@@ -52,16 +52,10 @@
         <td>{{ aluno.turno | turno }}</td>
         <td>{{ aluno.alunoBolsista | simNao }}</td>
         <td>
-          <div class="btn-group btn-group-toggle">
-            <label class="btn btn-sm btn-outline-warning border-0">
-              <a [routerLink]="[ 'cadastro', aluno.id ]" class="btn-outline-warning"> <i class="fas fa-folder-open"></i></a>
-            </label>
-            <label class="btn btn-sm btn-outline-danger border-0">
-              <a data-toggle="modal" [attr.data-target]="'#removeModal'+aluno.id" class="btn-outline-danger"> <i class="fas fa-trash-alt"></i></a>
-            </label>
-          </div>
+          <a [routerLink]="[ 'cadastro', aluno.id ]" class="btn-sm btn-outline-edit mr-2"> <i class="fas fa-edit"></i></a>
+          <button data-toggle="modal" [attr.data-target]="'#removeModal'+aluno.id" class="btn-sm btn-outline-delete"> <i class="fas fa-trash-alt"></i></button>
         </td>
-        
+      
         <app-modal-exclusion [id]="aluno.id" (eventModal)="onDelete($event)"></app-modal-exclusion>
       </tr>
     </tbody>
