--- a/src/app/registros/registro/registro.component.html
+++ b/src/app/registros/registro/registro.component.html
@@ -16,7 +16,7 @@
     <app-message-form [formValidation]="formValidation"></app-message-form>
 
     <div class="d-flex justify-content-center m-3">
-      <button type="reset" (click)="clean()" class="btn btn-warning mr-2"><i class="fas fa-eraser"></i> Limpar</button>
+      <button type="reset" (click)="clean()" class="btn-clean mr-2"><i class="fas fa-eraser"></i> Limpar</button>
       <button (click)="registrar()" class="btn btn-primary" [disabled]="loading"><i class="fas fa-check"></i> Registrar {{ title }}</button>
     </div>
     <app-loading [loading]="loading" [message]="'Processando...'"></app-loading>
