--- a/src/app/turmas/turmas.component.html
+++ b/src/app/turmas/turmas.component.html
@@ -1,7 +1,7 @@
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
   <h4>Cadastro de Turmas</h4>
   <div class="d-flex justify-content-end mb-2 mb-md-0">
-    <a class="btn btn-success" [routerLink]="[ 'cadastro' ]"><i class="fas fa-plus"></i> Nova Turma</a>
+    <a class="btn-new" [routerLink]="[ 'cadastro' ]"><i class="fas fa-plus"></i> Nova Turma</a>
   </div>
 </div>
 
@@ -29,8 +29,8 @@
       </select>
     </div>
     <div class="d-flex justify-content-center m-4">
-      <button type="reset" class="btn btn-warning mr-2"><i class="fas fa-eraser"></i> Limpar</button>
-      <button type="submit" (click)="search()" class="btn btn-info"><i class="fas fa-search"></i> Pesquisar</button>
+      <button type="reset" class="btn-clean mr-2"><i class="fas fa-eraser"></i> Limpar</button>
+      <button type="submit" (click)="search()" class="btn-search"><i class="fas fa-search"></i> Pesquisar</button>
     </div>
   </form>
 </div>
