added ngx-loading and removed manual loading

--- a/src/app/alunos/aluno/aluno.component.html
+++ b/src/app/alunos/aluno/aluno.component.html
@@ -2,6 +2,8 @@
   <h4>{{ title() }} Aluno</h4>
 </div>
 
+<ngx-loading [show]="loading"></ngx-loading>
+
 <form class="mb-5" [formGroup]="submitForm" novalidate>
   <div class="row">
     <div class="col-lg-6">
