--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -11,11 +11,11 @@
   <form class="col-md-7" [formGroup]="searchForm">
     <div class="form-group">
       <label for="nomeAluno">Nome do Aluno</label>
-      <input type="text" class="form-control" formControlName="nome" id="nomeAluno" placeholder="Filtrar por parte ou nome inteiro do aluno">
+      <input type="text" class="form-control" formControlName="nome" id="nomeAluno" placeholder="Filtrar por parte ou nome inteiro do aluno" maxlength="200">
     </div>
     <div class="form-group">
       <label for="matricula">Matrícula</label>
-      <input type="text" class="form-control" formControlName="matricula" id="matricula" placeholder="Filtrar pelo código exato da matrícula">
+      <input type="text" class="form-control" formControlName="matricula" id="matricula" placeholder="Filtrar pelo código exato da matrícula" maxlength="10">
     </div>
     <div class="form-group">
       <label for="anoLetivo">Ano letivo</label>
@@ -53,8 +53,14 @@
         <td>{{ aluno.turno | turno }}</td>
         <td>{{ aluno.alunoBolsista | simNao }}</td>
         <td>
-          <a [routerLink]="[ 'cadastro', aluno.id ]" class="btn-sm btn-outline-edit mr-2"> <i class="fas fa-edit"></i></a>
-          <button data-toggle="modal" [attr.data-target]="'#removeModal'+aluno.id" class="btn-sm btn-outline-delete"> <i class="fas fa-trash-alt"></i></button>
+          <div class="btn-group btn-group-toggle">
+            <label>
+              <a [routerLink]="[ 'cadastro', aluno.id ]" class="btn-sm btn-outline-edit mr-1"> <i class="fas fa-edit"></i></a>
+            </label>
+            <label>
+              <button data-toggle="modal" [attr.data-target]="'#removeModal'+aluno.id" class="btn-sm btn-outline-delete"> <i class="fas fa-trash-alt"></i></button>
+            </label>
+          </div>
         </td>
       
         <app-modal-exclusion [id]="aluno.id" (eventModal)="onDelete($event)"></app-modal-exclusion>
