--- a/src/app/turmas/turmas.component.html
+++ b/src/app/turmas/turmas.component.html
@@ -57,11 +57,11 @@
         <td>{{ turma.turno | turno }}</td>
         <td>
           <div class="btn-group btn-group-toggle">
-            <label class="btn btn-sm btn-outline-warning border-0">
-              <a [routerLink]="[ 'cadastro', turma.id ]" class="btn-outline-warning"> <i class="fas fa-folder-open"></i></a>
+            <label>
+              <a [routerLink]="[ 'cadastro', turma.id ]" class="btn btn-sm btn-outline-edit mr-1"> <i class="fas fa-edit"></i></a>
             </label>
-            <label class="btn btn-sm btn-outline-danger border-0">
-              <a data-toggle="modal" [attr.data-target]="'#removeModal'+turma.id" class="btn-outline-danger"> <i class="fas fa-trash-alt"></i></a>
+            <label>
+              <button data-toggle="modal" [attr.data-target]="'#removeModal'+turma.id" class="btn btn-sm btn-outline-delete"> <i class="fas fa-trash-alt"></i></button>
             </label>
           </div>
         </td>
