--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -8,19 +8,21 @@
 <ngx-loading [show]="loading"></ngx-loading>
 
 <div class="d-flex justify-content-center">
-  <form class="col-md-7" [formGroup]="searchForm">
+  <form class="col-md-6" [formGroup]="searchForm">
     <div class="form-group">
       <label for="nomeAluno">Nome do Aluno</label>
       <input type="text" class="form-control" formControlName="nome" id="nomeAluno" placeholder="Filtrar por parte ou nome inteiro do aluno" maxlength="200">
     </div>
-    <div class="form-group">
+    <div class="row">
+    <div class="form-group col-sm-6">
       <label for="matricula">Matrícula</label>
-      <input type="text" class="form-control" formControlName="matricula" id="matricula" placeholder="Filtrar pelo código exato da matrícula" maxlength="10">
+      <input type="text" class="form-control" formControlName="matricula" id="matricula" placeholder="Filtrar por matrícula exata" maxlength="10">
     </div>
-    <div class="form-group">
+    <div class="form-group col-sm-6">
       <label for="anoLetivo">Ano letivo</label>
       <input type="number" class="form-control" formControlName="anoLetivo" id="anoLetivo" placeholder="Filtrar pelo ano letivo">
     </div>
+  </div>
     <div class="d-flex justify-content-center m-4">
       <button type="reset" class="btn-clean mr-2"><i class="fas fa-eraser"></i> Limpar</button>
       <button type="submit" (click)="search()" class="btn-search"><i class="fas fa-search"></i> Pesquisar</button>
