--- a/src/app/turmas/turma/turma.component.html
+++ b/src/app/turmas/turma/turma.component.html
@@ -6,7 +6,7 @@
 
 <form [formGroup]="submitForm" novalidate>
   <div class="d-flex justify-content-center">
-    <div class="col-md-6">
+    <div class="col-lg-6">
       <div class="form-row">
         <div class="form-group col-sm-2">
           <label for="turma">Turma</label>
