--- a/src/app/turmas/turmas.component.html
+++ b/src/app/turmas/turmas.component.html
@@ -8,28 +8,31 @@
 <ngx-loading [show]="loading"></ngx-loading>
 
 <div class="d-flex justify-content-center">
-  <form class="col-md-7" [formGroup]="searchForm">
-    <div class="form-group">
-      <label for="descricao">Turma</label>
-      <input type="text" class="form-control" formControlName="descricao" id="descricao" placeholder="Filtrar por Turma">
+  <form class="col-lg-6" [formGroup]="searchForm">
+    <div class="form-row">
+      <div class="form-group col-sm-2">
+        <label for="descricao">Turma</label>
+        <input type="text" class="form-control" formControlName="descricao" id="descricao" maxlength="5">
+      </div>
+      <div class="form-group col-sm-2">
+        <label for="serie">Série</label>
+        <input type="text" class="form-control" formControlName="serie" id="serie" maxlength="5">
+      </div>
+      <div class="form-group col-sm-2">
+        <label for="sala">Sala</label>
+        <input type="text" class="form-control" formControlName="sala" id="sala" maxlength="5">
+      </div>
+      <div class="form-group col-sm-6">
+        <label for="turnoSelect">Turno</label>
+        <select class="form-control" formControlName="turno" id="turnoSelect">
+          <option></option>
+          <option value="0">Matutino</option>
+          <option value="1">Vespertino</option>
+          <option value="2">Noturno</option>
+        </select>
+      </div>
     </div>
-    <div class="form-group">
-      <label for="serie">Série</label>
-      <input type="text" class="form-control" formControlName="serie" id="serie" placeholder="Filtrar por Série">
-    </div>
-    <div class="form-group">
-      <label for="sala">Sala</label>
-      <input type="text" class="form-control" formControlName="sala" id="sala" placeholder="Filtrar por Sala">
-    </div>
-    <div class="form-group">
-      <label for="turnoSelect">Turno</label>
-      <select class="form-control" formControlName="turno" id="turnoSelect">
-        <option></option>
-        <option value="0">Matutino</option>
-        <option value="1">Vespertino</option>
-        <option value="2">Noturno</option>
-      </select>
-    </div>
+    <small class="text-form text-muted">Filtros para pesquisa</small>
     <div class="d-flex justify-content-center m-4">
       <button type="reset" class="btn-clean mr-2"><i class="fas fa-eraser"></i> Limpar</button>
       <button type="submit" (click)="search()" class="btn-search"><i class="fas fa-search"></i> Pesquisar</button>
