fixed bugs on tables and datepicker

--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -31,44 +31,46 @@
 </div>
 
 <!-- List -->
-<div class="table-responsive" *ngIf="alunosPagResponse | async as paginationResponse">
-  <table class="table table-striped">
-    <thead>
-      <tr>
-        <th>Matrícula</th>
-        <th>Ano letivo</th>
-        <th>Nome</th>
-        <th>Série</th>
-        <th>Turma</th>
-        <th>Turno</th>
-        <th>Bolsita</th>
-        <th>Opções</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr *ngFor="let aluno of paginationResponse.content">
-        <td>{{ aluno.matricula }}</td>
-        <td>{{ aluno.anoLetivo }}</td>
-        <td>{{ aluno.nome }}</td>
-        <td>{{ aluno.serie }}</td>
-        <td>{{ aluno.turma }}</td>
-        <td>{{ aluno.turno | turno }}</td>
-        <td>{{ aluno.alunoBolsista | simNao }}</td>
-        <td>
-          <div class="btn-group btn-group-toggle">
-            <label>
-              <a [routerLink]="[ 'cadastro', aluno.id ]" class="btn-sm btn-outline-edit mr-1"> <i class="fas fa-edit"></i></a>
-            </label>
-            <label>
-              <button data-toggle="modal" [attr.data-target]="'#removeModal'+aluno.id" class="btn-sm btn-outline-delete"> <i class="fas fa-trash-alt"></i></button>
-            </label>
-          </div>
-        </td>
-      
-        <app-modal-exclusion [id]="aluno.id" (eventModal)="onDelete($event)"></app-modal-exclusion>
-      </tr>
-    </tbody>
-  </table>
+<div *ngIf="alunosPagResponse | async as paginationResponse">
+  <div class="table-responsive">
+    <table class="table table-striped">
+      <thead>
+        <tr>
+          <th>Matrícula</th>
+          <th>Ano letivo</th>
+          <th>Nome</th>
+          <th>Série</th>
+          <th>Turma</th>
+          <th>Turno</th>
+          <th>Bolsita</th>
+          <th>Opções</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let aluno of paginationResponse.content">
+          <td>{{ aluno.matricula }}</td>
+          <td>{{ aluno.anoLetivo }}</td>
+          <td>{{ aluno.nome }}</td>
+          <td>{{ aluno.serie }}</td>
+          <td>{{ aluno.turma }}</td>
+          <td>{{ aluno.turno | turno }}</td>
+          <td>{{ aluno.alunoBolsista | simNao }}</td>
+          <td>
+            <div class="btn-group btn-group-toggle">
+              <label>
+                <a [routerLink]="[ 'cadastro', aluno.id ]" class="btn-sm btn-outline-edit mr-1"> <i class="fas fa-edit"></i></a>
+              </label>
+              <label>
+                <button data-toggle="modal" [attr.data-target]="'#removeModal'+aluno.id" class="btn-sm btn-outline-delete"> <i class="fas fa-trash-alt"></i></button>
+              </label>
+            </div>
+          </td>
+        
+          <app-modal-exclusion [id]="aluno.id" (eventModal)="onDelete($event)"></app-modal-exclusion>
+        </tr>
+      </tbody>
+    </table>
 
+  </div>
   <app-pagination [paginationResponse]="paginationResponse" (eventPage)="onPage($event)"></app-pagination>
 </div>
