--- a/src/app/alunos/aluno/aluno.component.html
+++ b/src/app/alunos/aluno/aluno.component.html
@@ -28,7 +28,7 @@
             <div class="form-group col-sm-6">
               <label for="dataNascimento">Data de Nascimento</label>
               <div class="input-group">
-                <input ngbDatepicker #d="ngbDatepicker" class="form-control"
+                <input ngbDatepicker #d="ngbDatepicker" class="form-control" [minDate]="{year: 1900, month: 1, day: 1}"
                   [class.is-invalid]="alunoErrors.dataNascimento" formControlName="dataNascimento" id="dataNascimento"
                   placeholder="dd/mm/aaaa">
                 <div class="input-group-append">
@@ -152,7 +152,7 @@
                 class="fas fa-plus"></i> Adicionar
               telefone</button>
           </div>
-          <div class="form-group">
+          <div class="form-group table-responsive">
             <table class="table table-striped">
               <thead>
                 <tr>
