--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -58,10 +58,14 @@
           <td>
             <div class="btn-group btn-group-toggle">
               <label>
-                <a [routerLink]="[ 'cadastro', aluno.id ]" class="btn-sm btn-outline-edit mr-1"> <i class="fas fa-edit"></i></a>
+                <a [routerLink]="[ 'cadastro', aluno.id ]" class="btn-sm btn-outline-edit mr-1">
+                  <i class="fas fa-edit"></i>
+                </a>
               </label>
               <label>
-                <button data-toggle="modal" [attr.data-target]="'#removeModal'+aluno.id" class="btn-sm btn-outline-delete"> <i class="fas fa-trash-alt"></i></button>
+                <button data-toggle="modal" [attr.data-target]="'#removeModal'+aluno.id" class="btn-sm btn-outline-delete"> 
+                  <i class="fas fa-trash-alt"></i>
+                </button>
               </label>
             </div>
           </td>
