--- a/src/app/turmas/turmas.component.html
+++ b/src/app/turmas/turmas.component.html
@@ -62,10 +62,14 @@
           <td>
             <div class="btn-group btn-group-toggle">
               <label>
-                <a [routerLink]="[ 'cadastro', turma.id ]" class="btn btn-sm btn-outline-edit mr-1"> <i class="fas fa-edit"></i></a>
+                <a [routerLink]="[ 'cadastro', turma.id ]" class="btn btn-sm btn-outline-edit mr-1">
+                  <i class="fas fa-edit"></i>
+                </a>
               </label>
               <label>
-                <button data-toggle="modal" [attr.data-target]="'#removeModal'+turma.id" class="btn btn-sm btn-outline-delete"> <i class="fas fa-trash-alt"></i></button>
+                <button data-toggle="modal" [attr.data-target]="'#removeModal'+turma.id" class="btn btn-sm btn-outline-delete">
+                  <i class="fas fa-trash-alt"></i>
+                </button>
               </label>
             </div>
           </td>
