--- a/src/app/registros/registro/registro.component.html
+++ b/src/app/registros/registro/registro.component.html
@@ -17,6 +17,10 @@
 
     <app-message-form [formValidation]="formValidation"></app-message-form>
 
+    <div class="form-group text-center" *ngIf="base64Image != null">
+      <img [src]="base64Image" class="img-fluid img-thumbnail">
+    </div>
+
     <div class="d-flex justify-content-center m-3">
       <button type="reset" (click)="clean()" class="btn-clean mr-2"><i class="fas fa-eraser"></i> Limpar</button>
       <button (click)="registrar()" class="btn btn-primary" [disabled]="loading"><i class="fas fa-check"></i> Registrar {{ title }}</button>
