--- a/src/app/alunos/alunos.component.html
+++ b/src/app/alunos/alunos.component.html
@@ -23,9 +23,9 @@
       <input type="number" class="form-control" formControlName="anoLetivo" id="anoLetivo" placeholder="Filtrar pelo ano letivo">
     </div>
   </div>
-    <div class="d-flex justify-content-center m-4">
-      <button type="reset" class="btn-clean mr-2"><i class="fas fa-eraser"></i> Limpar</button>
-      <button type="submit" (click)="search()" class="btn-search"><i class="fas fa-search"></i> Pesquisar</button>
+    <div class="d-flex flex-row-reverse justify-content-center m-4">
+      <button type="reset" class="btn-clean ml-2"><i class="fas fa-eraser"></i> Limpar</button>
+      <button type="submit" (click)="search()" class="btn-search ml-2"><i class="fas fa-search"></i> Pesquisar</button>
     </div>
   </form>
 </div>
