--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -30,6 +30,8 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdownCadastros">
           <a class="dropdown-item disabled" href="#"><i class="fas fa-users"></i> Usuários</a>
           <div class="dropdown-divider"></div>
+          <a class="dropdown-item disabled" href="#"><i class="fas fa-user-friends"></i> Responsáveis</a>
+          <div class="dropdown-divider"></div>
           <a class="dropdown-item" [routerLink]="[ '/alunos' ]"><i class="fas fa-user-graduate"></i> Alunos</a>
           <div class="dropdown-divider"></div>
           <a class="dropdown-item" [routerLink]="[ '/turmas' ]" href="#"><i class="fas fa-chalkboard-teacher"></i> Turmas</a>
