--- a/src/app/turmas/turmas.component.html
+++ b/src/app/turmas/turmas.component.html
@@ -33,9 +33,9 @@
       </div>
     </div>
     <small class="text-form text-muted">Filtros para pesquisa</small>
-    <div class="d-flex justify-content-center m-4">
-      <button type="reset" class="btn-clean mr-2"><i class="fas fa-eraser"></i> Limpar</button>
-      <button type="submit" (click)="search()" class="btn-search"><i class="fas fa-search"></i> Pesquisar</button>
+    <div class="d-flex flex-row-reverse justify-content-center m-4">
+      <button type="reset" class="btn-clean ml-2"><i class="fas fa-eraser"></i> Limpar</button>
+      <button type="submit" (click)="search()" class="btn-search ml-2"><i class="fas fa-search"></i> Pesquisar</button>
     </div>
   </form>
 </div>
