--- a/src/app/turmas/turma/turma.component.html
+++ b/src/app/turmas/turma/turma.component.html
@@ -35,20 +35,20 @@
 
   <app-message-form [formValidation]="formValidation"></app-message-form>
 
-  <div class="d-flex justify-content-center m-3">
-    <a [routerLink]="[ '/turmas' ]" class="btn-register mr-2"><i class="fas fa-folder-open"></i> Cadastro</a>
+  <div class="d-flex flex-row-reverse justify-content-center m-3">
+    <a [routerLink]="[ '/turmas' ]" class="btn-register ml-2"><i class="fas fa-folder-open"></i> Cadastro</a>
 
     <ng-container *ngIf="formValidation.editMode; then edit; else new"></ng-container>
     <ng-template #edit>
-      <a *ngIf="!formValidation.alreadyNew" class="btn-new mr-2" [routerLink]="[ '/turmas/cadastro' ]"><i class="fas fa-plus"></i>
+      <a *ngIf="!formValidation.alreadyNew" class="btn-new ml-2" [routerLink]="[ '/turmas/cadastro' ]"><i class="fas fa-plus"></i>
         Nova Turma</a>
-      <button *ngIf="formValidation.alreadyNew" (click)="newTurma()" class="btn-new mr-2"><i class="fas fa-plus"></i>
+      <button *ngIf="formValidation.alreadyNew" (click)="newTurma()" class="btn-new ml-2"><i class="fas fa-plus"></i>
         Nova Turma</button>
     </ng-template>
     <ng-template #new>
-      <button type="reset" (click)="clean()" class="btn-clean mr-2"><i class="fas fa-eraser"></i> Limpar</button>
+      <button type="reset" (click)="clean()" class="btn-clean ml-2"><i class="fas fa-eraser"></i> Limpar</button>
     </ng-template>
 
-    <button (click)="save()" class="btn-save"><i class="fas fa-save"></i> Salvar</button>
+    <button (click)="save()" class="btn-save ml-2"><i class="fas fa-save"></i> Salvar</button>
   </div>
 </form>
