--- a/src/app/registros/registro/registro.component.html
+++ b/src/app/registros/registro/registro.component.html
@@ -17,8 +17,8 @@
 
     <app-message-form [formValidation]="formValidation"></app-message-form>
 
-    <div class="form-group text-center" *ngIf="base64Image != null">
-      <img [src]="base64Image" class="img-fluid img-thumbnail">
+    <div class="form-group text-center" *ngIf="alunoImage != null">
+      <img [src]="alunoImage" class="img-fluid img-thumbnail">
     </div>
 
     <div class="d-flex flex-row-reverse justify-content-center m-3">
