--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="jumbotron bg-light">
   <div class="container">
-    <p class="lead">Olá, Administrador!</p>
+    <p class="lead">Demonstração</p>
   </div>
 </div>
